--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-uglify": "^3.0.0",
     "gulp-vinyl-zip": "^2.1.0",
     "handlebars": "^4.0.10",
+    "handlebars-helpers": "^0.10.0",
     "highlight.js": "^9.12.0",
     "js-yaml": "^3.10.0",
     "map-stream": "^0.0.7",
