--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "postcss-import": "^11.0.0",
     "postcss-url": "^7.1.2",
     "prettier-eslint": "^8.2.0",
+    "renderjson": "^1.4.0",
     "require-from-string": "^2.0.1",
     "stylelint": "^8.2.0",
     "stylelint-config-standard": "^17.0.0",
