--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "antora-ui-default",
-  "description": "An archetype project that produces a UI for creating documentation sites with Antora",
-  "homepage": "https://gitlab.com/antora/antora-ui-default",
+  "name": "docs-decidim-org-ui",
+  "description": "A project that produces a UI for the Antora documentation site docs.decidim.org",
+  "homepage": "https://github.com/decidim/docs.decidim.org-ui",
   "license": "MPL-2.0",
   "repository": {
     "type": "git",
-    "url": "https://gitlab.com/antora/antora-ui-default.git"
+    "url": "https://github.com/decidim/docs.decidim.org-ui.git"
   },
   "engines": {
-    "node": ">= 8.0.0"
+    "node": ">= 10.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.6",
